# Research-Assistant-Sys

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
cli/: __init__.py  commands.py  interactive.py  repl.py  ui.py
docs/: agent_contracts.md  architecture_layers.md  multi_agent_go_no_go.md  observability.md  runbook.md  troubleshooting.md
experts/: __init__.py  base.py  builtin.py  extraction_agent.py  factory.py  locator_agent.py  registry.py  research_agent.py  teams.py
foundation/: __init__.py  errors.py
foundation/adapters/: __init__.py  paper_tools.py  pdf_converter.py  validators.py
foundation/config/: __init__.py  constants.py  settings.py
foundation/execution/: __init__.py  pipeline_batch.py  stage_metrics.py
foundation/modeling/: model_builder.py
foundation/models/: __init__.py  assistant_models.py  extraction_models.py
foundation/observability/: logging.py
foundation/parsing/: __init__.py  parsers.py
interface/: __init__.py  app.py  commands.py  interactive.py  repl.py  ui.py
orchestrator/: __init__.py  assembler.py  bootstrap.py  contracts.py  executor.py  router.py  service.py  workflow.py
scripts/: diagnose_arxiv_connection.py  run_assistant_acceptance.py  run_regression_suite.py  test_mineru_extract.py
